--- a/_config.yml
+++ b/_config.yml
@@ -20,9 +20,7 @@
 
 title: Damdin's notes
 email: regul1256@gmail.com
-description: >- # this means to ignore newlines until "baseurl:"
-e in _config.yml. It will appear in your document head meta (for
-   Hello, this is my personal blog with little notes related to documentation writing.
+description: Hello, this is my personal blog with little notes related to documentation writing.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: regul1256
